@@ -1,5 +1,8 @@
 2002-08-26  Alan Modra  <amodra@bigpond.net.au>
 
+	* gas/sparc/sparc.exp (sparc_elf_setup): New.
+	Use it to xfail for non-ELF targets.
+
 	* gas/tic54x/align.s: Add comment.
 	* gas/tic54x/align.d: Adjust .text size for 2002-05-23 write.c change.
 	* gas/tic54x/extaddr.d: Similarly adjust disassembly tail.
